=== master

* Disallow typecasting sets to string (similar to how hash and array are disallowed) (jeremyevans)

* Deprecate the set_literalizer extension (jeremyevans)

* Support sets in dataset filters similar to arrays, using IN/NOT IN (jeremyevans)

* Add Dataset#as_set and Dataset#select_set, as Set will be a core class in Ruby 4 (jeremyevans)

* Add support for Database#create_index :only option on PostgreSQL 11+ (KirIgor) (#2343)

* Add support for Database#indexes :invalid option on PostgresSQL (KirIgor, jeremyevans) (#2343)

=== 5.98.0 (2025-11-01)

* Make insert_returning_select use RETURNING when using table_select plugin (jeremyevans) (#2339)

* Fix Database#listen in postgres adapter to ignore all notifications after UNLISTEN (jeremyevans)

* Make Model.any? forward to the dataset, to work better with the any_not_empty extension (jeremyevans) (#2337)

* Make the rcte_tree and split_values plugins work together (jeremyevans)

* Make split_values plugin work when eager loading using join tables (jeremyevans) (#2336)

* Add Model#remove_key! to remove a key from values (jeremyevans)

* Add pg_auto_parameterize_duplicate_query_detection extension for N+1 query detection (jeremyevans)

* Recognize sqlite:filename and amalgalite:filename connection URLs (jeremyevans) (#2334)

=== 5.97.0 (2025-10-01)

* Simplify Postgres::PGRange#inspect output (jeremyevans)

* Add deprecated_associations plugin, for warning/raising for deprecated association access (jeremyevans)

* Clear all cached schema information when using Database#drop_schema on PostgreSQL (jeremyevans)

* Add Database#rename_schema on PostgreSQL (jeremyevans)

=== 5.96.0 (2025-09-01)

* Support alter_table rename_constraint on PostgreSQL 9.2+ (jeremyevans) (#2274)

* Do not auto parameterize PostgreSQL range and multirange types containing expressions (jeremyevans)

* Support sort and reverse methods in pg_array_ops extension on PostgreSQL 18+ (jeremyevans)
