@@ -1,5 +1,7 @@
 === master
 
+* Support filtering by associations using a set of associated objects (jeremyevans)
+
 * Disallow typecasting sets to string (similar to how hash and array are disallowed) (jeremyevans)
 
 * Deprecate the set_literalizer extension (jeremyevans)
